[tool.poetry]
name = "packageuser10"
version = "0.1.0"
description = ""
authors = ["snxyxxn <sny0324@ouklook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
